more design fixes, specially the too short background. Bug #16947
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/trunk/ucs@14376 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-webui-style/style/stylesheet.css
+++ b/management/univention-webui-style/style/stylesheet.css
@@ -21,6 +21,7 @@ body
 	font-weight: normal;
 	line-height: 17px;
 	color: #5d5e5d;
+	height: 100%;
 }
 
 body.component
@@ -76,6 +77,7 @@ div#wrapper
 {
 	width: 1050px;
 	margin-left: 10px;
+	height: auto;
 }
 
 .component div#wrapper
@@ -222,6 +224,7 @@ div#info .session
 {
 	margin-top: 5px;
 	display: block;
+	float: right;
 }
 
 div#info .name
@@ -305,9 +308,10 @@ div#content-wrapper
 {
 	width: 739px;
 	margin-left: 24px;
-	margin-top: 10px;
+	/*margin-top: 10px;*/
+	height: auto;
 	float: left;
-	padding-top: 150px;
+	margin-top: 150px;
 }
 
 .component div#content-wrapper
